@@ -116,6 +116,15 @@ public class TestValidation
                       (coercionMode == CoercionMode.STRING_TO_PRIMITIVE && clazz == String.class));
   }
 
+  /**
+   * Returns true if the provided value is "NaN", "Infinity", or "-Infinity".
+   */
+  private static boolean isNonNumericFloatString(Object value) {
+    return String.valueOf(Float.NaN).equals(value) ||
+        String.valueOf(Float.POSITIVE_INFINITY).equals(value) ||
+        String.valueOf(Float.NEGATIVE_INFINITY).equals(value);
+  }
+
   public void testCoercionValidation(String schemaText,
                                      String key,
                                      Object[][] inputs,
@@ -135,7 +144,7 @@ public class TestValidation
     {
       map.put(key, row[0]);
       ValidationResult result = validate(map, schema, options);
-      Assert.assertTrue(result.isValid());
+      Assert.assertTrue(result.isValid(), result.getMessages().toString());
       if (result.hasFix())
       {
         DataMap fixedMap = (DataMap) result.getFixed();
@@ -169,13 +178,21 @@ public class TestValidation
           case FLOAT:
             // convert numbers to Float
             Assert.assertNotSame(goodClass, fixedClass);
-            assertAllowedClass(coercionMode, goodClass);
+            // Validate the input class, except for non-numeric values like "NaN" where String is allowed
+            if (!isNonNumericFloatString(row[0]))
+            {
+              assertAllowedClass(coercionMode, goodClass);
+            }
             Assert.assertSame(fixedClass, Float.class);
             break;
           case DOUBLE:
             // convert numbers to Double
             Assert.assertNotSame(goodClass, fixedClass);
-            assertAllowedClass(coercionMode, goodClass);
+            // Validate the input class, except for non-numeric values like "NaN" where String is allowed
+            if (!isNonNumericFloatString(row[0]))
+            {
+              assertAllowedClass(coercionMode, goodClass);
+            }
             Assert.assertSame(fixedClass, Double.class);
             break;
           case BOOLEAN:
@@ -272,11 +289,11 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(false),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.FALSE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
         new DataList()
@@ -298,16 +315,16 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Boolean(true),
-        new Boolean(false)
+        Boolean.TRUE,
+        Boolean.FALSE
     };
 
     Object badObjects[] =
     {
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
@@ -333,10 +350,10 @@ public class TestValidation
 
     Object badObjects[] =
         {
-            new Integer(1),
-            new Long(1),
-            new Float(1),
-            new Double(1),
+            Integer.valueOf(1),
+            Long.valueOf(1),
+            Float.valueOf(1f),
+            Double.valueOf(1),
             new String("abc"),
             new DataMap(),
             new DataList()
@@ -354,22 +371,25 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Integer(1),
-        new Integer(-1),
+        Integer.valueOf(1),
+        Integer.valueOf(-1),
         Integer.MAX_VALUE,
         Integer.MAX_VALUE - 1
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        Float.NaN,
+        Double.POSITIVE_INFINITY,
+        Float.NEGATIVE_INFINITY
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -385,22 +405,28 @@ public class TestValidation
 
     Object input[][] =
       {
-        { new Integer(1), new Integer(1) },
-        { new Integer(-1), new Integer(-1) },
+        { Integer.valueOf(1), Integer.valueOf(1) },
+        { Integer.valueOf(-1), Integer.valueOf(-1) },
         { Integer.MAX_VALUE, Integer.MAX_VALUE },
         { Integer.MAX_VALUE - 1, Integer.MAX_VALUE - 1 },
-        { new Long(1), new Integer(1) },
-        { new Float(1), new Integer(1) },
-        { new Double(1), new Integer(1) }
+        { Long.valueOf(1), Integer.valueOf(1) },
+        { Float.valueOf(1f), Integer.valueOf(1) },
+        { Double.valueOf(1), Integer.valueOf(1) },
+        { Double.NaN, 0 },
+        { Float.POSITIVE_INFINITY, Integer.MAX_VALUE },
+        { Double.NEGATIVE_INFINITY, Integer.MIN_VALUE }
       };
 
     Object badObjects[] =
       {
-        new Boolean(true),
+        Boolean.TRUE,
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        String.valueOf(Float.NaN),
+        String.valueOf(Double.POSITIVE_INFINITY),
+        String.valueOf(Float.NEGATIVE_INFINITY)
       };
 
     testNormalCoercionValidation(schemaText, "bar", input, badObjects);
@@ -415,29 +441,36 @@ public class TestValidation
 
     Object input[][] =
         {
-            { new String("1"), new Integer(1) },
-            { new String("-1"), new Integer(-1) },
+            { new String("1"), Integer.valueOf(1) },
+            { new String("-1"), Integer.valueOf(-1) },
             { new String("" + Integer.MAX_VALUE), Integer.MAX_VALUE},
             { new String("" + (Integer.MAX_VALUE - 1)), Integer.MAX_VALUE - 1},
-            { new String("1.5"), new Integer(1) },
-            { new String("-1.5"), new Integer(-1) },
+            { new String("1.5"), Integer.valueOf(1) },
+            { new String("-1.5"), Integer.valueOf(-1) },
 
-            { new Integer(1), new Integer(1) },
-            { new Integer(-1), new Integer(-1) },
+            { Integer.valueOf(1), Integer.valueOf(1) },
+            { Integer.valueOf(-1), Integer.valueOf(-1) },
             { Integer.MAX_VALUE, Integer.MAX_VALUE },
             { Integer.MAX_VALUE - 1, Integer.MAX_VALUE - 1 },
-            { new Long(1), new Integer(1) },
-            { new Float(1), new Integer(1) },
-            { new Double(1), new Integer(1) }
+            { Long.valueOf(1), Integer.valueOf(1) },
+            { Float.valueOf(1f), Integer.valueOf(1) },
+            { Double.valueOf(1), Integer.valueOf(1) },
+
+            { Double.NaN, 0 },
+            { Float.POSITIVE_INFINITY, Integer.MAX_VALUE },
+            { Double.NEGATIVE_INFINITY, Integer.MIN_VALUE }
         };
 
     Object badObjects[] =
         {
-            new Boolean(true),
+            Boolean.TRUE,
             new String("abc"),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
-            new DataList()
+            new DataList(),
+            String.valueOf(Float.NaN),
+            String.valueOf(Double.POSITIVE_INFINITY),
+            String.valueOf(Float.NEGATIVE_INFINITY)
         };
 
     testStringToPrimitiveCoercionValidation(schemaText, "bar", input, badObjects);
@@ -452,20 +485,23 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Long(1),
-        new Long(-1)
+        Long.valueOf(1),
+        Long.valueOf(-1)
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        Double.NaN,
+        Float.POSITIVE_INFINITY,
+        Double.NEGATIVE_INFINITY
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -480,20 +516,26 @@ public class TestValidation
 
     Object inputs[][] =
       {
-        { new Long(1), new Long(1) },
-        { new Long(-1), new Long(-1) },
-        { new Integer(1), new Long(1) },
-        { new Float(1), new Long(1) },
-        { new Double(1), new Long(1) }
+        { Long.valueOf(1), Long.valueOf(1) },
+        { Long.valueOf(-1), Long.valueOf(-1) },
+        { Integer.valueOf(1), Long.valueOf(1) },
+        { Float.valueOf(1f), Long.valueOf(1) },
+        { Double.valueOf(1), Long.valueOf(1) },
+        { Float.NaN, 0L },
+        { Double.POSITIVE_INFINITY, Long.MAX_VALUE },
+        { Float.NEGATIVE_INFINITY, Long.MIN_VALUE }
       };
 
     Object badObjects[] =
       {
-        new Boolean(true),
+        Boolean.TRUE,
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        String.valueOf(Double.NaN),
+        String.valueOf(Float.POSITIVE_INFINITY),
+        String.valueOf(Double.NEGATIVE_INFINITY)
       };
 
     testNormalCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -508,25 +550,35 @@ public class TestValidation
 
     Object inputs[][] =
         {
-            { new String("1"), new Long(1) },
-            { new String("-1"), new Long(-1) },
+            { new String("1"), Long.valueOf(1) },
+            { new String("-1"), Long.valueOf(-1) },
             { new String("" + Long.MAX_VALUE), Long.MAX_VALUE },
+            { String.valueOf(Long.MAX_VALUE - 1), Long.MAX_VALUE - 1},
+            {"1.5", Long.valueOf(1)},
+            {"-1.5", Long.valueOf(-1)},
 
-            { new Long(1), new Long(1) },
-            { new Long(-1), new Long(-1) },
-            { new Integer(1), new Long(1) },
-            { new Float(1), new Long(1) },
-            { new Double(1), new Long(1) }
+            { Long.valueOf(1), Long.valueOf(1) },
+            { Long.valueOf(-1), Long.valueOf(-1) },
+            { Integer.valueOf(1), Long.valueOf(1) },
+            { Float.valueOf(1f), Long.valueOf(1) },
+            { Double.valueOf(1), Long.valueOf(1) },
+
+            { Float.NaN, 0L },
+            { Double.POSITIVE_INFINITY, Long.MAX_VALUE },
+            { Float.NEGATIVE_INFINITY, Long.MIN_VALUE }
         };
 
 
     Object badObjects[] =
         {
-            new Boolean(true),
+            Boolean.TRUE,
             new String("abc"),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
-            new DataList()
+            new DataList(),
+            String.valueOf(Double.NaN),
+            String.valueOf(Float.POSITIVE_INFINITY),
+            String.valueOf(Double.NEGATIVE_INFINITY)
         };
 
     testStringToPrimitiveCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -541,20 +593,28 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Float(1),
-        new Float(-1)
+        Float.valueOf(1f),
+        Float.valueOf(-1f),
+        Float.NaN,
+        Float.POSITIVE_INFINITY,
+        Float.NEGATIVE_INFINITY
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Double.valueOf(1),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        "1.1",
+        "-1.1",
+        String.valueOf(Float.NaN),
+        String.valueOf(Float.POSITIVE_INFINITY),
+        String.valueOf(Float.NEGATIVE_INFINITY)
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -569,20 +629,28 @@ public class TestValidation
 
     Object inputs[][] =
       {
-        { new Float(1), new Float(1) },
-        { new Float(-1), new Float(-1) },
-        { new Integer(1), new Float(1) },
-        { new Long(1), new Float(1) },
-        { new Double(1), new Float(1) }
-      };
+        { Float.valueOf(1f), Float.valueOf(1f) },
+        { Float.valueOf(-1f), Float.valueOf(-1f) },
+        { Integer.valueOf(1), Float.valueOf(1f) },
+        { Long.valueOf(1), Float.valueOf(1f) },
+        { Double.valueOf(1), Float.valueOf(1f) },
+        { String.valueOf(Float.NaN), Float.NaN },
+        { String.valueOf(Float.POSITIVE_INFINITY), Float.POSITIVE_INFINITY },
+        { String.valueOf(Float.NEGATIVE_INFINITY), Float.NEGATIVE_INFINITY },
+        { Double.NaN, Float.NaN },
+        { Double.POSITIVE_INFINITY, Float.POSITIVE_INFINITY },
+        { Double.NEGATIVE_INFINITY, Float.NEGATIVE_INFINITY }
+    };
 
     Object badObjects[] =
       {
-        new Boolean(true),
+        Boolean.TRUE,
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        "1.1",
+        "-1.1"
       };
 
     testNormalCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -597,23 +665,30 @@ public class TestValidation
 
     Object inputs[][] =
         {
-            { new String("1"), new Float(1) },
-            { new String("-1"), new Float(-1) },
-            { new String("1.01"), new Float(1.01) },
-            { new String("-1.01"), new Float(-1.01) },
+            { new String("1"), Float.valueOf(1f) },
+            { new String("-1"), Float.valueOf(-1f) },
+            { new String("1.01"), Float.valueOf(1.01f) },
+            { new String("-1.01"), Float.valueOf(-1.01f) },
             { new String("" + Float.MAX_VALUE), Float.MAX_VALUE },
 
-            { new Float(1), new Float(1) },
-            { new Float(1), new Float(1) },
-            { new Float(-1), new Float(-1) },
-            { new Integer(1), new Float(1) },
-            { new Long(1), new Float(1) },
-            { new Double(1), new Float(1) }
+            { Float.valueOf(1f), Float.valueOf(1f) },
+            { Float.valueOf(1f), Float.valueOf(1f) },
+            { Float.valueOf(-1f), Float.valueOf(-1f) },
+            { Integer.valueOf(1), Float.valueOf(1f) },
+            { Long.valueOf(1), Float.valueOf(1f) },
+            { Double.valueOf(1), Float.valueOf(1f) },
+
+            { String.valueOf(Float.NaN), Float.NaN },
+            { String.valueOf(Float.POSITIVE_INFINITY), Float.POSITIVE_INFINITY },
+            { String.valueOf(Float.NEGATIVE_INFINITY), Float.NEGATIVE_INFINITY },
+            { Double.NaN, Float.NaN },
+            { Double.POSITIVE_INFINITY, Float.POSITIVE_INFINITY },
+            { Double.NEGATIVE_INFINITY, Float.NEGATIVE_INFINITY }
         };
 
     Object badObjects[] =
         {
-            new Boolean(true),
+            Boolean.TRUE,
             new String("abc"),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
@@ -632,20 +707,28 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Double(1),
-        new Double(-1)
+        Double.valueOf(1),
+        Double.valueOf(-1),
+        Double.NaN,
+        Double.POSITIVE_INFINITY,
+        Double.NEGATIVE_INFINITY
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        "1.1",
+        "-1.1",
+        String.valueOf(Double.NaN),
+        String.valueOf(Double.POSITIVE_INFINITY),
+        String.valueOf(Double.NEGATIVE_INFINITY)
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -660,20 +743,28 @@ public class TestValidation
 
     Object inputs[][] =
       {
-        { new Double(1), new Double(1) },
-        { new Double(-1), new Double(-1) },
-        { new Integer(1), new Double(1) },
-        { new Long(1), new Double(1) },
-        { new Float(1), new Double(1) }
+        { Double.valueOf(1), Double.valueOf(1) },
+        { Double.valueOf(-1), Double.valueOf(-1) },
+        { Integer.valueOf(1), Double.valueOf(1) },
+        { Long.valueOf(1), Double.valueOf(1) },
+        { Float.valueOf(1f), Double.valueOf(1) },
+        { String.valueOf(Double.NaN), Double.NaN },
+        { String.valueOf(Double.POSITIVE_INFINITY), Double.POSITIVE_INFINITY },
+        { String.valueOf(Double.NEGATIVE_INFINITY), Double.NEGATIVE_INFINITY },
+        { Float.NaN, Double.NaN },
+        { Float.POSITIVE_INFINITY, Double.POSITIVE_INFINITY },
+        { Float.NEGATIVE_INFINITY, Double.NEGATIVE_INFINITY }
       };
 
     Object badObjects[] =
       {
-        new Boolean(true),
+        Boolean.TRUE,
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
-        new DataList()
+        new DataList(),
+        "1.1",
+        "-1.1",
       };
 
     testNormalCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -688,22 +779,29 @@ public class TestValidation
 
     Object inputs[][] =
         {
-            { new String("1"), new Double(1) },
-            { new String("-1"), new Double(-1) },
-            { new String("1.01"), new Double(1.01) },
-            { new String("-1.01"), new Double(-1.01) },
+            { new String("1"), Double.valueOf(1) },
+            { new String("-1"), Double.valueOf(-1) },
+            { new String("1.01"), Double.valueOf(1.01) },
+            { new String("-1.01"), Double.valueOf(-1.01) },
             { new String("" + Double.MAX_VALUE), Double.MAX_VALUE },
 
-            { new Double(1), new Double(1) },
-            { new Double(-1), new Double(-1) },
-            { new Integer(1), new Double(1) },
-            { new Long(1), new Double(1) },
-            { new Float(1), new Double(1) }
+            { Double.valueOf(1), Double.valueOf(1) },
+            { Double.valueOf(-1), Double.valueOf(-1) },
+            { Integer.valueOf(1), Double.valueOf(1) },
+            { Long.valueOf(1), Double.valueOf(1) },
+            { Float.valueOf(1f), 1d},
+
+            { String.valueOf(Double.NaN), Double.NaN },
+            { String.valueOf(Double.POSITIVE_INFINITY), Double.POSITIVE_INFINITY },
+            { String.valueOf(Double.NEGATIVE_INFINITY), Double.NEGATIVE_INFINITY },
+            { Float.NaN, Double.NaN },
+            { Float.POSITIVE_INFINITY, Double.POSITIVE_INFINITY },
+            { Float.NEGATIVE_INFINITY, Double.NEGATIVE_INFINITY }
         };
 
     Object badObjects[] =
         {
-            new Boolean(true),
+            Boolean.TRUE,
             new String("abc"),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
@@ -729,11 +827,11 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new DataMap(),
         new DataList(),
         new String("\u0100"),
@@ -774,11 +872,11 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new DataMap(),
         new DataList(),
         new String(),
@@ -826,11 +924,11 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new String("foobar"),
         new String("Apple"),
@@ -857,28 +955,28 @@ public class TestValidation
     Object goodObjects[] =
     {
         new DataList(),
-        new DataList(asList(new Integer(1))),
-        new DataList(asList(new Integer(2), new Integer(3))),
+        new DataList(asList(Integer.valueOf(1))),
+        new DataList(asList(Integer.valueOf(2), Integer.valueOf(3))),
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataMap(),
-        new DataList(asList(new Boolean(true))),
-        new DataList(asList(new Long(1))),
-        new DataList(asList(new Float(1))),
-        new DataList(asList(new Double(1))),
+        new DataList(asList(Boolean.TRUE)),
+        new DataList(asList(Long.valueOf(1))),
+        new DataList(asList(Float.valueOf(1f))),
+        new DataList(asList(Double.valueOf(1))),
         new DataList(asList(new String("1"))),
         new DataList(asList(new DataMap())),
         new DataList(asList(new DataList())),
-        new DataList(asList(new Boolean(true), new Integer(1))),
-        new DataList(asList(new Integer(1), new Boolean(true)))
+        new DataList(asList(Boolean.TRUE, Integer.valueOf(1))),
+        new DataList(asList(Integer.valueOf(1), Boolean.TRUE))
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -903,19 +1001,19 @@ public class TestValidation
 
     Object badObjects[] =
       {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataMap(),
-        new DataList(asList(new Boolean(true))),
+        new DataList(asList(Boolean.TRUE)),
         new DataList(asList(new String("1"))),
         new DataList(asList(new DataMap())),
         new DataList(asList(new DataList())),
-        new DataList(asList(new Boolean(true), new Integer(1))),
-        new DataList(asList(new Integer(1), new Boolean(true)))
+        new DataList(asList(Boolean.TRUE, Integer.valueOf(1))),
+        new DataList(asList(Integer.valueOf(1), Boolean.TRUE))
       };
 
     testNormalCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -943,18 +1041,18 @@ public class TestValidation
 
     Object badObjects[] =
         {
-            new Boolean(true),
-            new Integer(1),
-            new Long(1),
-            new Float(1),
-            new Double(1),
+            Boolean.TRUE,
+            Integer.valueOf(1),
+            Long.valueOf(1),
+            Float.valueOf(1f),
+            Double.valueOf(1),
             new String(),
             new DataMap(),
-            new DataList(asList(new Boolean(true))),
+            new DataList(asList(Boolean.TRUE)),
             new DataList(asList(new DataMap())),
             new DataList(asList(new DataList())),
-            new DataList(asList(new Boolean(true), new Integer(1))),
-            new DataList(asList(new Integer(1), new Boolean(true)))
+            new DataList(asList(Boolean.TRUE, Integer.valueOf(1))),
+            new DataList(asList(Integer.valueOf(1), Boolean.TRUE))
         };
 
     testStringToPrimitiveCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -976,22 +1074,22 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataList(),
-        new DataMap(asMap("key1", new Boolean(true))),
-        new DataMap(asMap("key1", new Long(1))),
-        new DataMap(asMap("key1", new Float(1))),
-        new DataMap(asMap("key1", new Double(1))),
+        new DataMap(asMap("key1", Boolean.TRUE)),
+        new DataMap(asMap("key1", Long.valueOf(1))),
+        new DataMap(asMap("key1", Float.valueOf(1f))),
+        new DataMap(asMap("key1", Double.valueOf(1))),
         new DataMap(asMap("key1", new String("1"))),
         new DataMap(asMap("key1", new DataMap())),
         new DataMap(asMap("key1", new DataList())),
-        new DataMap(asMap("key1", new Integer(1), "key2", new Long(1))),
-        new DataMap(asMap("key1", new Long(1), "key2", new Integer(1)))
+        new DataMap(asMap("key1", Integer.valueOf(1), "key2", Long.valueOf(1))),
+        new DataMap(asMap("key1", Long.valueOf(1), "key2", Integer.valueOf(1)))
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -1018,14 +1116,14 @@ public class TestValidation
 
     Object badObjects[] =
       {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataList(),
-        new DataMap(asMap("key1", new Boolean(true))),
+        new DataMap(asMap("key1", Boolean.TRUE)),
         new DataMap(asMap("key1", new String("1"))),
         new DataMap(asMap("key1", new DataMap())),
         new DataMap(asMap("key1", new DataList())),
@@ -1058,14 +1156,14 @@ public class TestValidation
 
     Object badObjects[] =
         {
-            new Boolean(true),
-            new Integer(1),
-            new Long(1),
-            new Float(1),
-            new Double(1),
+            Boolean.TRUE,
+            Integer.valueOf(1),
+            Long.valueOf(1),
+            Float.valueOf(1f),
+            Double.valueOf(1),
             new String(),
             new DataList(),
-            new DataMap(asMap("key1", new Boolean(true))),
+            new DataMap(asMap("key1", Boolean.TRUE)),
             new DataMap(asMap("key1", new DataMap())),
             new DataMap(asMap("key1", new DataList())),
         };
@@ -1096,7 +1194,7 @@ public class TestValidation
     Object goodObjects[] =
     {
         Data.NULL,
-        new DataMap(asMap("int", new Integer(1))),
+        new DataMap(asMap("int", Integer.valueOf(1))),
         new DataMap(asMap("string", "x")),
         new DataMap(asMap("Fruits", "APPLE")),
         new DataMap(asMap("Fruits", "ORANGE")),
@@ -1104,34 +1202,34 @@ public class TestValidation
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataList(),
         new DataMap(),
-        new DataMap(asMap("int", new Boolean(true))),
+        new DataMap(asMap("int", Boolean.TRUE)),
         new DataMap(asMap("int", new String("1"))),
-        new DataMap(asMap("int", new Long(1L))),
-        new DataMap(asMap("int", new Float(1.0f))),
-        new DataMap(asMap("int", new Double(1.0))),
+        new DataMap(asMap("int", Long.valueOf(1L))),
+        new DataMap(asMap("int", Float.valueOf(1.0f))),
+        new DataMap(asMap("int", Double.valueOf(1.0))),
         new DataMap(asMap("int", new DataMap())),
         new DataMap(asMap("int", new DataList())),
-        new DataMap(asMap("string", new Boolean(true))),
-        new DataMap(asMap("string", new Integer(1))),
-        new DataMap(asMap("string", new Long(1L))),
-        new DataMap(asMap("string", new Float(1.0f))),
-        new DataMap(asMap("string", new Double(1.0))),
+        new DataMap(asMap("string", Boolean.TRUE)),
+        new DataMap(asMap("string", Integer.valueOf(1))),
+        new DataMap(asMap("string", Long.valueOf(1L))),
+        new DataMap(asMap("string", Float.valueOf(1.0f))),
+        new DataMap(asMap("string", Double.valueOf(1.0))),
         new DataMap(asMap("string", new DataMap())),
         new DataMap(asMap("string", new DataList())),
         new DataMap(asMap("Fruits", "foobar")),
-        new DataMap(asMap("Fruits", new Integer(1))),
+        new DataMap(asMap("Fruits", Integer.valueOf(1))),
         new DataMap(asMap("Fruits", new DataMap())),
         new DataMap(asMap("Fruits", new DataList())),
-        new DataMap(asMap("int", new Integer(1), "string", "x")),
-        new DataMap(asMap("x", new Integer(1), "y", new Long(1))),
+        new DataMap(asMap("int", Integer.valueOf(1), "string", "x")),
+        new DataMap(asMap("x", Integer.valueOf(1), "y", Long.valueOf(1))),
     };
 
     testCoercionValidation(schemaText, "bar", goodObjects, badObjects, noCoercionValidationOption());
@@ -1172,30 +1270,30 @@ public class TestValidation
 
     Object badObjects[] =
       {
-        new Boolean(true),
-        new Integer(1),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Integer.valueOf(1),
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String(),
         new DataList(),
-        new DataMap(asMap("int", new Boolean(true))),
+        new DataMap(asMap("int", Boolean.TRUE)),
         new DataMap(asMap("int", new String("1"))),
         new DataMap(asMap("int", new DataMap())),
         new DataMap(asMap("int", new DataList())),
-        new DataMap(asMap("string", new Boolean(true))),
-        new DataMap(asMap("string", new Integer(1))),
-        new DataMap(asMap("string", new Long(1L))),
-        new DataMap(asMap("string", new Float(1.0f))),
-        new DataMap(asMap("string", new Double(1.0))),
+        new DataMap(asMap("string", Boolean.TRUE)),
+        new DataMap(asMap("string", Integer.valueOf(1))),
+        new DataMap(asMap("string", Long.valueOf(1L))),
+        new DataMap(asMap("string", Float.valueOf(1.0f))),
+        new DataMap(asMap("string", Double.valueOf(1.0))),
         new DataMap(asMap("string", new DataMap())),
         new DataMap(asMap("string", new DataList())),
         new DataMap(asMap("Fruits", "foobar")),
-        new DataMap(asMap("Fruits", new Integer(1))),
+        new DataMap(asMap("Fruits", Integer.valueOf(1))),
         new DataMap(asMap("Fruits", new DataMap())),
         new DataMap(asMap("Fruits", new DataList())),
-        new DataMap(asMap("int", new Integer(1), "string", "x")),
-        new DataMap(asMap("x", new Integer(1), "y", new Long(1))),
+        new DataMap(asMap("int", Integer.valueOf(1), "string", "x")),
+        new DataMap(asMap("x", Integer.valueOf(1), "y", Long.valueOf(1))),
       };
 
     testNormalCoercionValidation(schemaText, "bar", inputs, badObjects);
@@ -1214,16 +1312,16 @@ public class TestValidation
 
     Object goodObjects[] =
     {
-        new Integer(1),
-        new Integer(-1)
+        Integer.valueOf(1),
+        Integer.valueOf(-1)
     };
 
     Object badObjects[] =
     {
-        new Boolean(true),
-        new Long(1),
-        new Float(1),
-        new Double(1),
+        Boolean.TRUE,
+        Long.valueOf(1),
+        Float.valueOf(1f),
+        Double.valueOf(1),
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
@@ -1249,16 +1347,16 @@ public class TestValidation
 
     Object inputs[][] =
       {
-        { new Integer(1), new Integer(1) },
-        { new Integer(-1), new Integer(-1) },
-        { new Long(1), new Integer(1) },
-        { new Float(1), new Integer(1) },
-        { new Double(1), new Integer(1) }
+        { Integer.valueOf(1), Integer.valueOf(1) },
+        { Integer.valueOf(-1), Integer.valueOf(-1) },
+        { Long.valueOf(1), Integer.valueOf(1) },
+        { Float.valueOf(1f), Integer.valueOf(1) },
+        { Double.valueOf(1), Integer.valueOf(1) }
       };
 
     Object badObjects[] =
       {
-        new Boolean(true),
+        Boolean.TRUE,
         new String("abc"),
         ByteString.copyAvroString("bytes", false),
         new DataMap(),
@@ -1284,18 +1382,18 @@ public class TestValidation
 
     Object inputs[][] =
         {
-            { new String("1"), new Integer(1) },
+            { new String("1"), Integer.valueOf(1) },
 
-            { new Integer(1), new Integer(1) },
-            { new Integer(-1), new Integer(-1) },
-            { new Long(1), new Integer(1) },
-            { new Float(1), new Integer(1) },
-            { new Double(1), new Integer(1) }
+            { Integer.valueOf(1), Integer.valueOf(1) },
+            { Integer.valueOf(-1), Integer.valueOf(-1) },
+            { Long.valueOf(1), Integer.valueOf(1) },
+            { Float.valueOf(1f), Integer.valueOf(1) },
+            { Double.valueOf(1), Integer.valueOf(1) }
         };
 
     Object badObjects[] =
         {
-            new Boolean(true),
+            Boolean.TRUE,
             new String("abc"),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
@@ -1353,8 +1451,8 @@ public class TestValidation
           new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "optionalBoolean", true, "optionalDouble", 999.5)),
           new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "optionalBoolean", true, "optionalDouble", 999.5, "optionalWithDefaultString", "tag")),
           // unnecessary keys
-          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "extra1", new Boolean(true))),
-          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "optionalBoolean", true, "optionalDouble", 999.5, "extra1", new Boolean(true)))
+          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "extra1", Boolean.TRUE)),
+          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "defaultString", "cog", "optionalBoolean", true, "optionalDouble", 999.5, "extra1", Boolean.TRUE))
         }
       },
       {
@@ -1369,8 +1467,8 @@ public class TestValidation
           new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "optionalBoolean", true, "optionalDouble", 999.5)),
           new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "optionalBoolean", true, "optionalDouble", 999.5, "optionalWithDefaultString", "tag")),
           // unnecessary keys
-          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "extra1", new Boolean(true))),
-          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "optionalBoolean", true, "optionalDouble", 999.5, "extra1", new Boolean(true)))
+          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "extra1", Boolean.TRUE)),
+          new DataMap(asMap("requiredInt", 78, "requiredString", "dog", "optionalBoolean", true, "optionalDouble", 999.5, "extra1", Boolean.TRUE))
         }
       }
     };
@@ -1388,11 +1486,11 @@ public class TestValidation
           new ValidationOptions(RequiredMode.FIXUP_ABSENT_WITH_DEFAULT, CoercionMode.OFF)
         },
         {
-          new Boolean(true),
-          new Integer(1),
-          new Long(1),
-          new Float(1),
-          new Double(1),
+          Boolean.TRUE,
+          Integer.valueOf(1),
+          Long.valueOf(1),
+          Float.valueOf(1f),
+          Double.valueOf(1),
           new String(),
           new DataList(),
           // invalid field value types
@@ -2098,11 +2196,11 @@ public class TestValidation
     Object disallowedForUnrecognizedField[] =
         {
             "a string",
-            new Boolean(false),
-            new Integer(1),
-            new Long(1),
-            new Float(1),
-            new Double(1),
+            Boolean.FALSE,
+            Integer.valueOf(1),
+            Long.valueOf(1),
+            Float.valueOf(1f),
+            Double.valueOf(1),
             ByteString.copyAvroString("bytes", false),
             new DataMap(),
             new DataList()
